Stania - Point Text class update; Overflow-y fix

--- a/src/components/stania/stania.css
+++ b/src/components/stania/stania.css
@@ -1,126 +1,133 @@
-.stania_content{
-  display:flex;
+.stania_content {
+  display: flex;
   flex-direction: column;
-  gap:100px;
+  gap: 100px;
+  overflow-y: hidden;
 }
 
-.stania_overview_content{
-  display:flex;
+.stania_overview_content {
+  display: flex;
   flex-direction: column;
-  gap:20px;
+  gap: 20px;
   justify-content: flex-start;
 }
 
-.stania_overview_img{
-width: 100%;
+.stania_overview_img {
+  width: 100%;
   max-width: 600px;
   display: flex;
   justify-content: center;
   padding-left: 60px;
 }
-.stania_blur_large, .stania_blur_small{
-  position:absolute;
-  z-index:0;
-  pointer-events:none;
+.stania_blur_large,
+.stania_blur_small {
+  position: absolute;
+  z-index: 0;
+  pointer-events: none;
 }
 
-
-.stania_blur_large{
-  left:-250px;
-  top:-250px;
-  width:800px;
-  height:auto;
-  opacity:0.6;
+.stania_blur_large {
+  left: -250px;
+  top: -250px;
+  width: 800px;
+  height: auto;
+  opacity: 0.6;
 }
 
-.stania_blur_small{
-  right:20px;
-  bottom:-240px;
-  width:300px;
-  height:auto;
-  opacity:0.6;
+.stania_blur_small {
+  right: 20px;
+  bottom: -240px;
+  width: 300px;
+  height: auto;
+  opacity: 0.6;
 }
 
-.stania_goal{
-  max-width:600px;
+.stania_goal {
+  max-width: 600px;
 }
 
-.stania_goal_img{
-  width:100%;
-  max-width:500px;
-  height:auto;
-  padding-right:60px;
+.stania_goal_img {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+  padding-right: 60px;
 }
 
-.stania_research{
-  height:420px;
+.stania_research {
+  height: 420px;
   justify-content: space-between;
-  position:relative;
+  position: relative;
 }
 
-.stania_research_column{
+.stania_research_column {
   align-self: flex-end;
 }
 
-.stania_blur_research{
-  position:absolute;
-  right:10%;
-  width:360px;
-  height:auto;
-  top:-100px;
+.stania_blur_research {
+  position: absolute;
+  right: 10%;
+  width: 360px;
+  height: auto;
+  top: -100px;
 }
 
-.stania_image_block img, .stania_info_arhi img{
-  width:100%;
-  height:auto;
+.stania_image_block img,
+.stania_info_arhi img {
+  width: 100%;
+  height: auto;
 }
 
-.stania_image_block{
-  width:100%;
-  max-width:600px;
+.stania_image_block {
+  width: 100%;
+  max-width: 600px;
 }
 
-.stania_filters > .stania_image_block{
-  max-width:100%;
+.stania_filters > .stania_image_block {
+  max-width: 100%;
 }
 
-.stania_info_img{
-  padding-left:60px;
+.stania_info_img {
+  padding-left: 60px;
 }
 
-.stania_ui > .stania_image_block, .stania_dm > .stania_image_block{
-  padding-right:60px;
+.stania_ui > .stania_image_block,
+.stania_dm > .stania_image_block {
+  padding-right: 60px;
 }
 
-.stania_design_img{
-  width:100%;
-  height:auto;
+.stania_design_img {
+  width: 100%;
+  height: auto;
 }
 
-@media(max-width:1200px){
-  
-  .stania_overview_img{
-  padding-left: 24px;
-  max-width: 440px;
-}
-
-.stania_info_img{
-    padding-left:24px;
+@media (max-width: 1200px) {
+  .stania_overview_img {
+    padding-left: 24px;
+    max-width: 440px;
   }
 
-.stania_goal_img, .stania_ui > .stania_image_block, .stania_dm > .stania_image_block{
-  padding-right:24px;
-}
+  .stania_info_img {
+    padding-left: 24px;
+  }
+
+  .stania_goal_img,
+  .stania_ui > .stania_image_block,
+  .stania_dm > .stania_image_block {
+    padding-right: 24px;
+  }
 }
 
-@media(max-width:900px){
-  .stania_overview_img, .stania_info_img{
-    padding-left:0;
+@media (max-width: 900px) {
+  .stania_overview_img,
+  .stania_info_img {
+    padding-left: 0;
   }
-  .stania_goal_img, .stania_ui > .stania_image_block, .stania_dm > .stania_image_block{
-  padding-right:0;
-}
-.stania_research_column{
-  align-self: center;
-}
+  .stania_goal_img,
+  .stania_ui > .stania_image_block,
+  .stania_dm > .stania_image_block {
+    padding-right: 0;
+  }
+  .stania_research_column {
+    align-self: center;
+  }
 }
